--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </li>
           <li>
             <img
-              src="/images/tom.jpg"
+              src="./images/tom.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
