--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">Web Studio</a>
       <nav>
+        <a href="./index.html">Web Studio</a>
         <ul>
           <li><a href="./index.html">Studio</a></li>
           <li><a href="./index.html">Portfolio</a></li>
@@ -17,8 +17,8 @@
       </nav>
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
-      <address><a href="tel:+110001111111">+11 (000) 111-11-11</a></address>
     </header>
     <main>
       <!--hero section-->
